# Review_Writer

./: .gitignore  README.md  main.py  pyproject.toml
packaging/: review_writer.iss  review_writer.spec  version_info.txt
review_writer/: __init__.py  app_paths.py  core_ranking.py  document_ingest.py  evidence_index.py  exports.py  fulltext.py  health.py  iconography.py  llm_policy.py  markdown_view.py  model_catalog.json  model_catalog.py  models.py  planner.py  provenance.py  reader.py  report_lifecycle.py  report_templates.py  reporting.py  review_protocol.py  search_engine.py  search_strategy.py  secret_store.py  settings.py  settings_views.py  source_adapter.py  storage.py  task_queue.py  theme.py  typography.py  ui.py  ui_utils.py  workflow_models.py  workflow_store.py  workflow_view.py
review_writer/generators/: __init__.py  agent_planner.py  llm_client.py
review_writer/integrations/: __init__.py  base.py  ima.py  library.py  runtime.py  zotero.py
scripts/: build_windows.ps1
tests/: test_agent_planner.py  test_app_paths.py  test_exports_split.py  test_fulltext.py  test_integrations.py  test_llm_client.py  test_markdown_view.py  test_model_catalog_updates.py  test_models.py  test_planner.py  test_reader.py  test_reliability_features.py  test_report_lifecycle.py  test_reporting.py  test_reporting_split.py  test_search_engine.py  test_search_strategy.py  test_secret_store.py  test_settings.py  test_storage.py  test_theme.py  test_ui.py  test_workflow_models_stage3.py  test_workflow_store.py  test_workflow_view.py
tests/fixtures/: crossref_search.json  (+4 more)
